# icey

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  declarative_state_ros_prototype.py  icey.hpp  package.xml
benchmark/: benchmark.md  events_throughout_node.js
doc/: advanced.md  extending_icey.md  getting_started.md  intermediate.md  lifecycle_nodes_idea.md  using_parameter_structs.md  using_tf.md
examples/: automatic_synchronization.cpp  class_based_api.cpp  client.cpp  listener.cpp  managing_state.cpp  message_filters_interoperability.cpp  mp_scratchpad.cpp  multi_node.cpp  parameter_based_initialization.cpp  parameters_struct.cpp  piping.cpp  service.cpp  service_client.cpp  service_client_and_server.cpp  service_client_class_api.cpp  service_server.cpp  signal_generator.cpp  signal_generator_async_await.cpp  simple.cpp  talker.cpp  tf_approx_filter.cpp  tf_broadcaster.cpp  using_image_transport.cpp
icey/: .gitignore  CMakeLists.txt  TODO.md  icey.hpp  icey_ros1.hpp  package.xml
icey/benchmark/: benchmark.md
icey/benchmark/src/: events_throughput.cpp  service_server_async_await_plain.cpp  tf_lookup_async_ref.cpp
icey/doc/: .gitignore  Doxyfile  README.md  api_filters.md  api_it.md  api_ref2.rst  api_reference.md  api_reference.rst  api_ros.md  api_streams.md  async_flow.md  conf.py  coroutine_basics.md  development.md  extending_icey.md  filtering.md  getting_started.md  index.rst  lifecycle_nodes.md  lifecycle_nodes_idea.md  parameters.md  publish_subscribe.md  requirements.txt  support_for_lifecycle_nodes.md  translating_an_autoware_node.md  usage_of_tf_in_aw.md  using_parameter_structs.md  using_services.md  using_tf.md  using_tf_new.md
icey/doc/_build/doctrees/: api_ref2.doctree  api_reference.doctree  development.doctree  environment.pickle  getting_started.doctree  index.doctree  using_tf.doctree
icey/doc/_build/doctrees/api/: cpp_doxygen_sphinx.doctree  index.doctree
icey/doc/_build/html/: .buildinfo  .buildinfo.bak  api_ref2.html  api_reference.html  development.html  extending_icey.html  genindex.html  getting_started.html  index.html  lifecycle_nodes_idea.html  objects.inv  search.html  searchindex.js  translating_an_autoware_node.html  using_parameter_structs.html  using_tf.html
icey/doc/_build/html/.doctrees/: api_reference.doctree  environment.pickle  extending_icey.doctree  index.doctree  lifecycle_nodes_idea.doctree  translating_an_autoware_node.doctree  using_parameter_structs.doctree
icey/doc/_build/html/_downloads/c1f2d07f9954c54ec33801246d6d88ca/: index.html
icey/doc/_build/html/_sources/: api_reference.md  api_reference.md.txt  development.md  extending_icey.md  getting_started.md.txt  index.rst  index.rst.txt  using_parameter_structs.md  using_tf.md
icey/doc/_build/html/_sources/api/: cpp_doxygen_sphinx.rst.txt
icey/doc/_build/html/_static/: book_custom.css  icey.css
icey/doc/_build/html/_static/js/: fix_api_highlighting.js
icey/doc/_build/html/api/: cpp_doxygen_sphinx.html  index.html
icey/doc/_static/: book_custom.css  icey.css
icey/doc/api/: index.rst
icey/doc/source/: Doxyfile  api_async_primitives.md  api_entities.md  api_it.md  api_reference.md  api_ros.md  api_streams.md  async_flow.md  conf.py  coroutine_basics.md  design.md  development.md  extending_an_existing_event_loop_with_async_await.md  extending_icey.md  filtering.md  first_icey_node.md  getting_started.md  index.md  index.rst  lifecycle_nodes.md  parameters.md  publish_subscribe.md  timers.md  using_actions.md  using_services.md  using_tf.md
icey/doc/source/_static/: icey.css
icey/include/icey/: functional_api.hpp  icey.hpp  icey_async_await.hpp  icey_image_transport.hpp  icey_rx.hpp  parameters_struct.hpp  tf2_message_filter.hpp
icey/include/icey/action/: action.hpp  client.hpp  client_goal_handle.hpp  client_goal_handle_impl.hpp  create_client.hpp  create_server.hpp  server.hpp  server_goal_handle.hpp  types.hpp
icey/include/icey/actions/: client.cpp  client.hpp  create_server.hpp  server.cpp  server.hpp
icey/include/icey/impl/: bag_of_metaprogramming_tricks.hpp  field_reflection.hpp  observable.hpp  promise.hpp  result.hpp  stream.hpp  task.hpp
icey/python/: icey.py
icey/src/actions/: client.cpp  server.cpp  server_goal_handle.cpp
icey/test/: action_client_test.cpp  action_server_test.cpp  actions_async_await_test.cpp  async_await_test.cpp  callback_lifetime_test.cpp  context_test.cpp  entities_async_await_test.cpp  entities_test.cpp  filter_test.cpp  filters_test.cpp  nested_coroutines.cpp  no_copy_test.cpp  node_fixture.hpp  node_tasks_test.cpp  promise_async_await_test.cpp  promise_test.cpp  ros_entity_creation_test.cpp  ros_node_test.cpp  test_main.cpp  tsan_dds.supp
icey_examples/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  package.xml
icey_examples/autoware_gyro_odometer/: gyro_odometer_core.cpp  gyro_odometer_core.hpp
icey_examples/src/: action_client_async_await.cpp  action_server2.cpp  action_server_async_await.cpp  automatic_synchronization.cpp  class_based_api.cpp  coroutine_example.cpp  events_throughput.c  filters.cpp  lifecycle_nodes.cpp  listener.cpp  listener_async_await.cpp  managing_state.cpp  message_filters_interoperability.cpp  mp_scratchpad.cpp  multi_node.cpp  parameters_struct.cpp  service_client.cpp  service_client_async_await.cpp  service_client_class_api.cpp  service_server.cpp  service_server_async_await.cpp  signal_generator.cpp  signal_generator_async_await.cpp  simple_eventloop.cpp  synchronization.cpp  talker_async_await.cpp  tf_approx_filter.cpp  tf_broadcaster.cpp  tf_lookup_async_await.cpp  tf_lookup_async_ref.cpp  tf_pub_test.cpp  tf_subscription.cpp  tf_sychronization.cpp  using_async_await_only_context.cpp  using_icey_context.cpp  using_image_transport.cpp  writable_publisher.cpp
icey_examples/src/async_await/: bugtes.cpp  listener_async_await.cpp  pub_sub.cpp  service_client_async_await.cpp  service_server_async_await.cpp  signal_generator_async_await.cpp  talker_async_await.cpp  tf_lookup_async_await.cpp
python/: icey.py  promise.py
(+24 files in other folders)
