<?xml version="1.0"?>

<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
 <name>icey</name>
 <version>0.1.0</version>
 <description>ICEY</description>
 <maintainer email="ivo.ivanov@tha.de">Ivo Ivanov</maintainer>
 <license>MIT</license>

 <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
 <depend>rclcpp</depend>
 <depend>rclcpp_components</depend>

 <depend>geometry_msgs</depend> 
 <depend>sensor_msgs</depend>
 <depend>nav_msgs</depend>
 <depend>tf2_ros</depend>
 
 <depend>std_srvs</depend>
 <depend>diagnostic_updater</depend>
 <depend>message_filters</depend>
 <depend>image_transport</depend>
 
 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>
 <test_depend>ament_cmake_ros</test_depend>
 <test_depend>ament_cmake_gtest</test_depend>
 <test_depend>clang-tidy</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>